@@ -1,71 +1,86 @@
 package com.prototipo.platmod.config;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpMethod;
+import org.springframework.web.filter.CorsFilter;
+
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Autowired
+    private AuthenticationProvider authenticationProvider; // <--- INYECTAMOS EL PROVIDER DEL PASO 1
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Se mantiene tu config de CORS
+                .cors(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        // 1. 🔥 REGLA DE ORO PARA REACT: Permitir preflight (OPTIONS)
-                        // Si no pones esto, el navegador se bloquea antes de enviar el login
+                        // 1. Permitir OPTIONS
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // 2. Login y Registro Públicos
+                        // 2. Rutas Públicas
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/usuarios").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/cursos/**", "/api/planes/**", "/api/docentes/home").permitAll()
 
-                        // 3. Lecturas Públicas
-                        .requestMatchers(HttpMethod.GET, "/api/cursos/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/planes/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/docentes/home").permitAll()
-
-                        // 4. Admin
+                        // 3. Admin
                         .requestMatchers("/api/admin/**").hasAuthority("ADMINISTRADOR")
 
-                        // 5. El resto bloqueado
+                        // 4. Resto autenticado
                         .anyRequest().authenticated()
+                )
+                .authenticationProvider(authenticationProvider) // <--- CONECTAMOS EL PROVIDER AQUÍ
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+
+                // Manejo de errores en consola
+                .exceptionHandling(e -> e
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            System.out.println("⛔ ERROR AUTH: " + authException.getMessage());
+                            response.sendError(401, authException.getMessage());
+                        })
+                        .accessDeniedHandler((request, response, accessDeniedException) -> {
+                            System.out.println("⛔ ACCESO DENEGADO: " + accessDeniedException.getMessage());
+                            response.sendError(403, accessDeniedException.getMessage());
+                        })
                 );
 
         return http.build();
     }
 
+    // El CorsFilter se mantiene igual, es correcto tenerlo aquí
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        // ✅ Configuración permisiva para desarrollo
-        configuration.addAllowedOriginPattern("*"); // Permite peticiones desde localhost o tu dominio
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);
-        configuration.setMaxAge(3600L);
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+        source.registerCorsConfiguration("/**", config);
+
+        return new CorsFilter(source);
     }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+    // IMPORTANTE: YA NO ponemos el bean de PasswordEncoder aquí,
+    // porque ya está en ApplicationConfig.
 }
